add release ent function

--- a/dataorg/readme
+++ b/dataorg/readme
@@ -9,7 +9,7 @@ offset:  ____________________
 header  |......              |
         |____________________|
 
-the format of Node:
+the format of data Node:
 offset:  ____________________
 0x00    |blkID               |
         |......              |
@@ -34,4 +34,32 @@ x+2+keyLen     |--------------------|
 x+2+keyLen+2   |--------------------|
                |value string        |
                |____________________|
-  
+
+the format of data index Node:
+offset:  ____________________
+0x00    |blkID               |
+        |......              |
+header  |......              |
+        |                    |
+0x28    |--------------------|
+        |slot0               |
+        |--------------------|
+record  |slot1               |
+        |--------------------|
+        |.......             |
+        |____________________|
+
+the format of slot:
+
+offset:         ____________________
+x              |keyLen              |
+x+2            |--------------------|
+               |key string          |
+x+2+keyLen     |--------------------|
+               |indexLen(useless)   |
+x+2+keyLen+2   |--------------------|
+               |index               |
+               |____________________|
+
+
+
